fix(theme): align buttons height

--- a/packages/components/src/VirtualizedList/CellTitle/CellTitleActions.scss
+++ b/packages/components/src/VirtualizedList/CellTitle/CellTitleActions.scss
@@ -61,5 +61,6 @@ $tc-list-title-actions-menu-triangle: '\25b2';
 	:global(.btn-link) {
 		color: $tc-list-title-actions-color;
 		padding: 0 $padding-small;
+		min-height: auto;
 	}
 }
