--- a/packages/theme/src/theme/_navbar.button.scss
+++ b/packages/theme/src/theme/_navbar.button.scss
@@ -6,6 +6,7 @@
 .navbar {
 	.btn {
 		min-height: $navbar-height;
+		line-height: $navbar-height;
 
 		&:hover,
 		&:active,
