--- a/packages/theme/src/theme/_navs.scss
+++ b/packages/theme/src/theme/_navs.scss
@@ -153,4 +153,8 @@
 			padding-top: $padding-large;
 		}
 	}
+
+	> li > a > * {
+		vertical-align: middle;
+	}
 }
