--- a/packages/theme/src/theme/_variables.scss
+++ b/packages/theme/src/theme/_variables.scss
@@ -194,7 +194,7 @@ $btn-border-radius-base: $border-radius-base !default;
 $btn-border-radius-large: $border-radius-large !default;
 $btn-border-radius-small: $border-radius-small !default;
 
-$btn-line-height: 3.3rem !default;
+$btn-line-height: 3.5rem !default;
 
 //== Forms
 //
